# CPP_babel_2018

./: .gitignore  CMakeLists.txt  conanfile.txt
client/: .gitignore  client.pro
client/form/: CallReceiveWindow.ui  CallWindow.ui  LoginWindow.ui  MainWindow.ui
client/include/: CallReceiveWindow.hpp  CallWindow.hpp  LoginWindow.hpp  MainWindow.hpp  Protocol.hpp  SoundManager.hpp  TcpClient.hpp  UdpClient.hpp  mainwindow.h
client/src/: CallReceiveWindow.cpp  CallWindow.cpp  CodecManager.cpp  LoginWindow.cpp  MainWindow.cpp  Protocol.cpp  SoundManager.cpp  TcpClient.cpp  UdpClient.cpp  callwindow.cpp  main.cpp  mainwindow.cpp  pushbutton.cpp
portaudioTest/: CodecManager.cpp  CodecManager.hpp  test  test3.cpp
server/: .gitignore  main.cpp
server/data/: Data.cpp  Data.hpp
server/protocol/: Protocol.cpp  Protocol.hpp
server/tcpserver/: ATcpServer.cpp  ATcpServer.hpp  BoostTcpServer.cpp  BoostTcpServer.hpp  BoostTcpSession.cpp  BoostTcpSession.hpp  ITcpServer.hpp
src/Server/: main.cpp
tests/: .gitignore
tests/client/: SoundTest.cpp  SoundTest.hpp
tests/server/: DataTests.cpp  ProtocolTests.cpp  Tests.cpp  Tests.hpp
